--- a/packages.toml
+++ b/packages.toml
@@ -364,10 +364,7 @@ arch = [
   { name="npm", method="pacman" }
 ]
 macos = [ { name="node", method="brew" } ]
-ubuntu = [
-  { name="nodejs", method="apt" },
-  { name="npm", method="apt" }
-]
+ubuntu = [ { name="nodejs", method="apt" } ]
 
 ## for bash
 [bash-language-server]
