--- a/files/zsh/sheldon/plugins.toml
+++ b/files/zsh/sheldon/plugins.toml
@@ -1,7 +1,7 @@
 shell = "zsh"
 
 [templates]
-defer = "{{ hooks | get: \"pre\" | nl }}{% for file in files %}zsh-defer source \"{{ file }}\"\n{% endfor %}{{ hooks | get: \"post\" | nl }}"
+defer = "{{ hooks?.pre | nl }}{% for file in files %}zsh-defer source \"{{ file }}\"\n{% endfor %}{{ hooks?.post | nl }}"
 
 [plugins]
 
@@ -36,8 +36,8 @@ bindkey '^N' history-beginning-search-forward
 bindkey '^P' history-beginning-search-backward
 
 +autocomplete:recent-directories() {
-   reply=("${(@f)$(zoxide query -l)}")
-}
+  typeset -ga reply=("${(@f)$(zoxide query -l)}")
+  }
 
 () {
    local -a prefix=( '\e'{\[,O} )
