--- a/files/gpg/gpg-agent_for_macos.conf
+++ b/files/gpg/gpg-agent_for_macos.conf
@@ -4,4 +4,4 @@ default-cache-ttl 60480000
 max-cache-ttl-ssh 60480000
 default-cache-ttl-ssh 60480000
 
-pinentry-program /usr/local/bin/pinentry-mac
+pinentry-program pinentry-mac
